# ai-workflow-api

./: .claudeignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-ui.txt  requirements.txt
.claude/: CLAUDE.md
.github/workflows/: ci.yml
app/: auth.py  config.py  events.py  main.py  models.py
app/routes/: demo.py  runs.py  stream.py  workflows.py
app/services/: claude_client.py  node_registry.py  template.py  workflow_engine.py
app/services/nodes/: condition.py  http.py  llm.py  notify.py  trigger.py
docs/: WORKFLOW_OPTIMIZATION_GUIDE.md
docs/specs/: 2026-03-16-feature-per-client-rate-limiting-research.md  2026-03-16-feature-per-client-rate-limiting-spec.md  2026-03-16-grok-rate-limiting-deep-dive-prompt.md  2026-03-19-feature-ai-workflow-api-portfolio-polish-spec.md
tests/: conftest.py  test_config.py  test_models.py  test_node_registry.py  test_nodes.py  test_routes.py  test_worker.py  test_workflow_engine.py  test_yaml_workflows.py
ui/: app.py
worker/: worker.py
workflows/: document_summary.yaml  lead_qualification.yaml  support_triage.yaml
