[project]
name = "ai-workflow-api"
version = "1.0.0"
description = "YAML-driven workflow automation API with LLM orchestration, async job processing, and SSE streaming"
authors = [{name = "Cayman Roden"}]
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["workflow", "automation", "llm", "fastapi", "yaml", "sse", "async", "anthropic"]

[project.urls]
Homepage = "https://github.com/ChunkyTortoise/ai-workflow-api"
Repository = "https://github.com/ChunkyTortoise/ai-workflow-api"
Issues = "https://github.com/ChunkyTortoise/ai-workflow-api/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
